--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.11",
+    "swiper": "^10.2.0",
     "tailwindcss": "^3.3.3",
     "web-vitals": "^2.1.4"
   },
